--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
               <input
                 type="text"
                 name="email"
+                id="email"
                 class="login__form__input"
               /><br />
             </div>
@@ -114,6 +115,7 @@
               </div>
               <input
                 type="password"
+                id="password"
                 name="password"
                 class="login__form__input"
               /><br />
