changed the video link

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               ></a>
             </li>
             <li class="navbar__content__menu--item">
-              <a href="#" class="nav__link">Log In</a>
+              <a href="#" class="nav__link dark">Log In</a>
               <div></div>
             </li>
             <li class="navMenuIcon hidden">
@@ -486,10 +486,11 @@
           name="close"
           class="cursor closeNotice video__close"
         ></ion-icon>
+
         <iframe
           width="280"
           height="157.5"
-          src="https://www.youtube.com/embed/BdQU3Tcf_hQ?si=Oi3oAdtUUZVfPwRE"
+          src="https://www.youtube.com/embed/2_wc-tGLKg0?si=EcMBT7_8or8de-BY"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
