--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,6 +5,7 @@
     <title>codecademy clone</title>
     <link rel="stylesheet" href="./style/css/style.css" />
   </head>
+
   <body>
     <!-- notice section -->
     <div class="notice">
@@ -17,6 +17,73 @@
           </em>
         </p>
         <ion-icon name="close" class="cursor closeNotice"></ion-icon>
+      </div>
+    </div>
+
+    <!-- mobile navigation -->
+    <div class="mobile__nav">
+      <div class="mobile__nav__header">
+        <div class="logo">
+          <img
+            src="https://hackyourfuture2023.s3.eu-north-1.amazonaws.com/asset/img/logo.svg"
+            alt="logo"
+          />
+        </div>
+        <div class="mobile__nav__close">
+          <ion-icon name="close" class="cursor closeMobileNav"></ion-icon>
+        </div>
+      </div>
+      <div class="container">
+        <div class="mobile__nav__body">
+          <div class="searchBox">
+            <input
+              type="search"
+              name="search"
+              id="search"
+              class="mobile__nav__search"
+              placeholder="Search for courses, articles, and docs"
+            />
+          </div>
+          <div class="mobile__nav__item">
+            <div class="mobile__nav__link">
+              <ion-icon name="bookmarks" class="iconLrg"></ion-icon>
+              <label for="bookmarks">Catalog</label>
+            </div>
+            <ion-icon name="arrow-forward"></ion-icon>
+          </div>
+          <div class="mobile__nav__item">
+            <div class="mobile__nav__link">
+              <ion-icon name="book" class="iconLrg"></ion-icon>
+              <label for="bookmarks">Resources</label>
+            </div>
+            <ion-icon name="arrow-forward"></ion-icon>
+          </div>
+          <div class="mobile__nav__item">
+            <div class="mobile__nav__link">
+              <ion-icon name="contacts" class="iconLrg"></ion-icon>
+              <label for="bookmarks">Community</label>
+            </div>
+            <ion-icon name="arrow-forward"></ion-icon>
+          </div>
+          <div class="mobile__nav__item">
+            <div class="mobile__nav__link">
+              <ion-icon name="contacts" class="iconLrg"></ion-icon>
+              <label for="bookmarks">Pricing</label>
+            </div>
+            <ion-icon name="arrow-forward"></ion-icon>
+          </div>
+          <div class="mobile__nav__item">
+            <div class="mobile__nav__link">
+              <ion-icon name="briefcase" class="iconLrg"></ion-icon>
+              <label for="bookmarks">For Teams</label>
+            </div>
+            <ion-icon name="arrow-forward"></ion-icon>
+          </div>
+        </div>
+        <div class="mobile__nav__footer">
+          <a href="#" class="btn signUp">Sign Up </a>
+          <a href="#" class="btn logIn">Log In</a>
+        </div>
       </div>
     </div>
     <!-- navigation -->
@@ -48,8 +115,8 @@
                 <ion-icon
                   class="icon nav--icon"
                   name="arrow-dropdown"
-                ></ion-icon
-              ></a>
+                ></ion-icon>
+              </a>
               <div class="navbar__dropdown__menu">
                 <p>text</p>
               </div>
@@ -60,8 +127,8 @@
                 <ion-icon
                   class="icon nav--icon"
                   name="arrow-dropdown"
-                ></ion-icon
-              ></a>
+                ></ion-icon>
+              </a>
               <ul class="navbar__dropdown__menu displayBlock cursor">
                 <li class="navbar__dropdown__menu--item cursor">Forums</li>
                 <li class="navbar__dropdown__menu--item cursor">Discord</li>
@@ -79,8 +146,8 @@
                 <ion-icon
                   class="icon nav--icon"
                   name="arrow-dropdown"
-                ></ion-icon
-              ></a>
+                ></ion-icon>
+              </a>
               <ul class="navbar__dropdown__menu">
                 <li class="navbar__dropdown__menu--item cursor">
                   For Individuals
@@ -106,30 +173,37 @@
         <div class="navbar__content--itemRight shiftRight">
           <ul class="navbar__content--itemRight--menu noListStyle">
             <li class="shiftRight">
-              <a href="#" class="nav__search dark nav__link"
-                ><ion-icon
+              <a href="#" class="nav__search dark nav__link">
+                <ion-icon
                   class="icon"
                   name="search"
                   class="searchIcon"
-                ></ion-icon
-              ></a>
+                ></ion-icon>
+              </a>
             </li>
             <li class="navbar__content__menu--item">
-              <a href="#" class="nav__link">Log In</a>
+              <a href="#" class="nav__link dark">Log In</a>
               <div></div>
             </li>
             <li class="navMenuIcon hidden">
-              <a href="#" class="nav__link"
-                ><ion-icon class="icon" name="menu"></ion-icon
-              ></a>
+              <a href="#" class="nav__link">
+                <ion-icon
+                  class="icon"
+                  name="menu"
+                  class="hemBurgerMenuIcon"
+                ></ion-icon>
+              </a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
+    <div class="scrollTop cursor">
+      <ion-icon name="arrow-dropup-circle" class="scrollUpIcon"></ion-icon>
+    </div>
 
     <!-- Header Section -->
-    <header class="container">
+    <header class="header container">
       <section class="header__content">
         <div class="header__content__teacher">
           <img
@@ -214,97 +288,140 @@
         <div class="courses__content__nav">
           <ul class="courses__content__nav__navMenu">
             <li
-              class="courses__content__nav__navMenu__navItem course__selected newCourse"
+              class="courses__content__nav__navMenu--navItem cursor ai course__selected"
             >
-              <a href="#" class="courses__navLink light">AI</a>
+              AI
             </li>
-            <li class="courses__content__nav__navMenu--navItem">
-              <a href="#" class="courses__navLink light">Free</a>
+            <li class="courses__content__nav__navMenu--navItem free cursor">
+              Free
             </li>
-            <li class="courses__content__nav__navMenu--navItem">
-              <a href="#" class="courses__navLink light">New to coding</a>
+            <li class="courses__content__nav__navMenu--navItem coding cursor">
+              New to coding
             </li>
-            <li class="courses__content__nav__navMenu--navItem">
-              <a href="#" class="courses__navLink light">Most popular</a>
+            <li class="courses__content__nav__navMenu--navItem popular cursor">
+              Most popular
             </li>
-            <li class="courses__content__nav__navMenu--navItem">
-              <a href="#" class="courses__navLink light">Skill paths</a>
+            <li class="courses__content__nav__navMenu--navItem skill cursor">
+              Skill paths
             </li>
-            <li class="courses__content__nav__navMenu--navItem">
-              <a href="#" class="courses__navLink light">Career paths</a>
+            <li class="courses__content__nav__navMenu--navItem career cursor">
+              Career paths
             </li>
           </ul>
         </div>
         <div class="courses__cardsContainer">
-          <div class="course__card">
-            <div class="course__card--header">Free course</div>
-            <div class="course__card--body">
-              <h4 class="course__card--body--name">Intro to Generative AI</h4>
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Doloremque Lorem, ipsum dolor sit
-              </p>
-            </div>
-            <div class="course__card--footer">
-              <p>
-                <ion-icon class="icon" name="podium"></ion-icon>
-                <b> Beginner </b> Friendly
-              </p>
-              <p>1 lesson</p>
-            </div>
-          </div>
-
-          <div class="course__card">
-            <div class="course__card--header">Free course</div>
-            <div class="course__card--body">
-              <h4 class="course__card--body--name">Intro to Generative AI</h4>
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Doloremque Lorem, ipsum dolor sit
-              </p>
-            </div>
-            <div class="course__card--footer">
-              <p>
-                <ion-icon class="icon" name="podium"></ion-icon>
-                <b> Beginner </b> Friendly
-              </p>
-              <p>1 lesson</p>
+          <div class="cards ai">
+            <div class="course__card courses__ai">
+              <div class="course__card--header">AI</div>
+              <div class="course__card--body">
+                <h4 class="course__card--body--name">Intro to Generative AI</h4>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Doloremque Lorem, ipsum dolor sit
+                </p>
+              </div>
+              <div class="course__card--footer">
+                <p>
+                  <ion-icon class="icon" name="podium"></ion-icon>
+                  <b> Beginner </b> Friendly
+                </p>
+                <p>1 lesson</p>
+              </div>
             </div>
           </div>
-
-          <div class="course__card">
-            <div class="course__card--header">Free course</div>
-            <div class="course__card--body">
-              <h4 class="course__card--body--name">Intro to Generative AI</h4>
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Doloremque Lorem, ipsum dolor sit
-              </p>
-            </div>
-            <div class="course__card--footer">
-              <p>
-                <ion-icon class="icon" name="podium"></ion-icon>
-                <b> Beginner </b> Friendly
-              </p>
-              <p>1 lesson</p>
+          <div class="cards free">
+            <div class="course__card courses__free">
+              <div class="course__card--header">Free</div>
+              <div class="course__card--body">
+                <h4 class="course__card--body--name">Intro to Generative AI</h4>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Doloremque Lorem, ipsum dolor sit
+                </p>
+              </div>
+              <div class="course__card--footer">
+                <p>
+                  <ion-icon class="icon" name="podium"></ion-icon>
+                  <b> Beginner </b> Friendly
+                </p>
+                <p>1 lesson</p>
+              </div>
             </div>
           </div>
-
-          <div class="course__card">
-            <div class="course__card--header">Free course</div>
-            <div class="course__card--body">
-              <h4 class="course__card--body--name">Intro to Generative AI</h4>
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Doloremque Lorem, ipsum dolor sit
-              </p>
+          <div class="cards new">
+            <div class="course__card courses__new">
+              <div class="course__card--header">New</div>
+              <div class="course__card--body">
+                <h4 class="course__card--body--name">Intro to Generative AI</h4>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Doloremque Lorem, ipsum dolor sit
+                </p>
+              </div>
+              <div class="course__card--footer">
+                <p>
+                  <ion-icon class="icon" name="podium"></ion-icon>
+                  <b> Beginner </b> Friendly
+                </p>
+                <p>1 lesson</p>
+              </div>
             </div>
-            <div class="course__card--footer">
-              <p>
-                <ion-icon class="icon" name="podium"></ion-icon>
-                <b> Beginner </b> Friendly
-              </p>
-              <p>1 lesson</p>
+          </div>
+          <div class="cards popular">
+            <div class="course__card courses__popular">
+              <div class="course__card--header">Popular</div>
+              <div class="course__card--body">
+                <h4 class="course__card--body--name">Intro to Generative AI</h4>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Doloremque Lorem, ipsum dolor sit
+                </p>
+              </div>
+              <div class="course__card--footer">
+                <p>
+                  <ion-icon class="icon" name="podium"></ion-icon>
+                  <b> Beginner </b> Friendly
+                </p>
+                <p>1 lesson</p>
+              </div>
+            </div>
+          </div>
+          <div class="cards skill">
+            <div class="course__card courses__skill">
+              <div class="course__card--header">skill</div>
+              <div class="course__card--body">
+                <h4 class="course__card--body--name">Intro to Generative AI</h4>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Doloremque Lorem, ipsum dolor sit
+                </p>
+              </div>
+              <div class="course__card--footer">
+                <p>
+                  <ion-icon class="icon" name="podium"></ion-icon>
+                  <b> Beginner </b> Friendly
+                </p>
+                <p>1 lesson</p>
+              </div>
+            </div>
+          </div>
+          <div class="cards career">
+            <div class="course__card courses__career">
+              <div class="course__card--header">career</div>
+              <div class="course__card--body">
+                <h4 class="course__card--body--name">Intro to Generative AI</h4>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Doloremque Lorem, ipsum dolor sit
+                </p>
+              </div>
+              <div class="course__card--footer">
+                <p>
+                  <ion-icon class="icon" name="podium"></ion-icon>
+                  <b> Beginner </b> Friendly
+                </p>
+                <p>1 lesson</p>
+              </div>
             </div>
           </div>
         </div>
@@ -480,16 +597,17 @@
     </section>
 
     <!-- Video section -->
-    <section class="video">
+    <section class="video hidden">
       <div class="video__container">
         <ion-icon
           name="close"
           class="cursor closeNotice video__close"
         ></ion-icon>
+
         <iframe
-          width="280"
-          height="157.5"
-          src="https://www.youtube.com/embed/BdQU3Tcf_hQ?si=Oi3oAdtUUZVfPwRE"
+          max-width="560"
+          max-height="315"
+          src="https://www.youtube.com/embed/2_wc-tGLKg0?si=EcMBT7_8or8de-BY"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
